--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+#<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -100,11 +100,11 @@
 </head>
 <body>
     <div class="card">
-        <h1>Heyyyy Babbbyy</h1>
-        <p>I LOVE YOU BABY</p>
+        <h1>Heyyyy Gandu</h1>
+        <p>😚😚</p>
         <h3 ID="cm">Put Finger Here</h3>
         <div class="message">
-          I am the happiest person with you and its my luck that you chose me. I have been so happy ieth you that i can't even explain but i want to spend whole of my life with you in your arms.Online Aa jao
+           chal hatt behen ki 
         </div>
     </div>
     <script src="pp.js"></script>
