--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-#<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -100,11 +100,11 @@
 </head>
 <body>
     <div class="card">
-        <h1>Heyyyy Gandu</h1>
-        <p>😚😚</p>
+        <h1>custom heading</h1>
+        <p>custom message</p>
         <h3 ID="cm">Put Finger Here</h3>
         <div class="message">
-           chal hatt behen ki 
+           custom message
         </div>
     </div>
     <script src="pp.js"></script>
